tests/tests/errors/2017-5.vb
'#compiler-options:/link:xxx
'#compiler-message:Command line error BC2017 : could not find library 'xxx'
'#exit-code:1